dnl Process this file with autoconf to produce a configure script.

dnl Boilerplate
AC_INIT(metalink, 0.3.5)
AC_CONFIG_SRCDIR(src/metalink.cc)
AM_INIT_AUTOMAKE

AC_PROG_CXX

dnl Library tests
AM_PATH_LIBGCRYPT
AC_SYS_LARGEFILE

PKG_CHECK_MODULES(DEPS, glibmm-2.4)
AC_SUBST(DEPS_CFLAGS)
AC_SUBST(DEPS_LIBS)

AC_OUTPUT(Makefile)


